@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2021, University of Oslo
+ * Copyright (c) 2004-2022, University of Oslo
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -28,12 +28,6 @@
 package org.hisp.dhis.dataintegrity;
 
 import static com.google.common.collect.Lists.newArrayList;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.hasItem;
-import static org.hamcrest.Matchers.hasKey;
-import static org.hamcrest.Matchers.hasSize;
 import static org.hisp.dhis.DhisConvenienceTest.createDataElement;
 import static org.hisp.dhis.DhisConvenienceTest.createDataElementGroup;
 import static org.hisp.dhis.DhisConvenienceTest.createDataSet;
@@ -45,34 +39,36 @@ import static org.hisp.dhis.DhisConvenienceTest.createOrganisationUnitGroup;
 import static org.hisp.dhis.DhisConvenienceTest.createProgram;
 import static org.hisp.dhis.DhisConvenienceTest.createProgramRule;
 import static org.hisp.dhis.DhisConvenienceTest.createProgramRuleAction;
-import static org.hisp.dhis.DhisConvenienceTest.createProgramRuleVariable;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.hisp.dhis.DhisConvenienceTest.createProgramRuleVariableWithDataElement;
+import static org.hisp.dhis.dataintegrity.DataIntegrityDetails.DataIntegrityIssue.issueName;
+import static org.hisp.dhis.utils.Assertions.assertContainsOnly;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.anyString;
 import static org.mockito.Mockito.clearInvocations;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
+import java.util.List;
 import java.util.Map;
-import java.util.Set;
-import java.util.SortedMap;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import org.hibernate.SessionFactory;
 import org.hisp.dhis.antlr.ParserException;
 import org.hisp.dhis.category.CategoryService;
 import org.hisp.dhis.dataelement.DataElement;
 import org.hisp.dhis.dataelement.DataElementGroup;
 import org.hisp.dhis.dataelement.DataElementService;
 import org.hisp.dhis.dataentryform.DataEntryFormService;
+import org.hisp.dhis.dataintegrity.DataIntegrityDetails.DataIntegrityIssue;
 import org.hisp.dhis.dataset.DataSet;
 import org.hisp.dhis.dataset.DataSetService;
 import org.hisp.dhis.expression.ExpressionService;
@@ -100,18 +96,19 @@ import org.hisp.dhis.programrule.ProgramRuleVariable;
 import org.hisp.dhis.programrule.ProgramRuleVariableService;
 import org.hisp.dhis.random.BeanRandomizer;
 import org.hisp.dhis.validation.ValidationRuleService;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 /**
  * @author Lars Helge Overland
  */
-public class DataIntegrityServiceTest
+@ExtendWith( MockitoExtension.class )
+class DataIntegrityServiceTest
 {
+
     private static final String INVALID_EXPRESSION = "INVALID_EXPRESSION";
 
     @Mock
@@ -163,9 +160,6 @@ public class DataIntegrityServiceTest
     @Mock
     private ProgramRuleActionService programRuleActionService;
 
-    @Rule
-    public MockitoRule mockitoRule = MockitoJUnit.rule();
-
     private DefaultDataIntegrityService subject;
 
     private DataElementGroup elementGroupA;
@@ -216,13 +210,14 @@ public class DataIntegrityServiceTest
 
     private final BeanRandomizer rnd = BeanRandomizer.create( DataSet.class, "periodType", "workflow" );
 
-    @Before
+    @BeforeEach
     public void setUp()
     {
         subject = new DefaultDataIntegrityService( i18nManager, programRuleService, programRuleActionService,
             programRuleVariableService, dataElementService, indicatorService, dataSetService,
             organisationUnitService, organisationUnitGroupService, validationRuleService, expressionService,
-            dataEntryFormService, categoryService, periodService, programIndicatorService );
+            dataEntryFormService, categoryService, periodService, programIndicatorService,
+            mock( SessionFactory.class ) );
         setUpFixtures();
     }
 
@@ -316,7 +311,7 @@ public class DataIntegrityServiceTest
         programRuleA = createProgramRule( 'A', programA );
         programRuleB = createProgramRule( 'B', programB );
 
-        programRuleVariableA = createProgramRuleVariable( 'A', programA );
+        programRuleVariableA = createProgramRuleVariableWithDataElement( 'A', programA, elementA );
 
         programRuleActionA = createProgramRuleAction( 'A' );
     }
@@ -325,8 +320,10 @@ public class DataIntegrityServiceTest
     // Tests
     // -------------------------------------------------------------------------
 
+    // -------------------------------------------------------------------------
+
     @Test
-    public void testGetDataElementsWithoutDataSet()
+    void testGetDataElementsWithoutDataSet()
     {
         subject.getDataElementsWithoutDataSet();
         verify( dataElementService ).getDataElementsWithoutDataSets();
@@ -334,7 +331,7 @@ public class DataIntegrityServiceTest
     }
 
     @Test
-    public void testGetDataElementsWithoutGroups()
+    void testGetDataElementsWithoutGroups()
     {
         subject.getDataElementsWithoutGroups();
         verify( dataElementService ).getDataElementsWithoutGroups();
@@ -342,7 +339,7 @@ public class DataIntegrityServiceTest
     }
 
     @Test
-    public void testGetDataElementsAssignedToDataSetsWithDifferentPeriodType()
+    void testGetDataElementsAssignedToDataSetsWithDifferentPeriodType()
     {
         String seed = "abcde";
         Map<String, DataElement> dataElements = createRandomDataElements( 6, seed );
@@ -361,20 +358,23 @@ public class DataIntegrityServiceTest
         dataSet2.addDataSetElement( dataElements.get( seed + 6 ) );
         dataSet2.addDataSetElement( dataElements.get( seed + 1 ) );
 
-        when( dataElementService.getAllDataElements() ).thenReturn( new ArrayList<>( dataElements.values() ) );
-        when( dataSetService.getAllDataSets() ).thenReturn( newArrayList( dataSet1, dataSet2 ) );
+        when( dataElementService.getAllDataElements() ).thenReturn( List.copyOf( dataElements.values() ) );
+        when( dataSetService.getAllDataSets() ).thenReturn( List.of( dataSet1, dataSet2 ) );
 
-        SortedMap<DataElement, Collection<DataSet>> result = subject
+        List<DataIntegrityIssue> result = subject
             .getDataElementsAssignedToDataSetsWithDifferentPeriodTypes();
 
-        assertThat( result.get( dataElements.get( seed + 4 ) ), hasSize( 2 ) );
-        assertThat( result.get( dataElements.get( seed + 1 ) ), hasSize( 2 ) );
-        assertThat( result.get( dataElements.get( seed + 4 ) ), containsInAnyOrder( dataSet1, dataSet2 ) );
-        assertThat( result.get( dataElements.get( seed + 1 ) ), containsInAnyOrder( dataSet1, dataSet2 ) );
+        assertEquals( 2, result.size() );
+        DataIntegrityIssue issue0 = result.get( 0 );
+        assertEquals( seed + 1, issue0.getId() );
+        assertContainsOnly( issue0.getRefs(), issueName( dataSet1 ), issueName( dataSet2 ) );
+        DataIntegrityIssue issue1 = result.get( 1 );
+        assertEquals( seed + 4, issue1.getId() );
+        assertContainsOnly( issue1.getRefs(), issueName( dataSet1 ), issueName( dataSet2 ) );
     }
 
     @Test
-    public void testGetDataElementsAssignedToDataSetsWithDifferentPeriodTypeNoResult()
+    void testGetDataElementsAssignedToDataSetsWithDifferentPeriodTypeNoResult()
     {
 
         String seed = "abcde";
@@ -395,13 +395,11 @@ public class DataIntegrityServiceTest
         when( dataElementService.getAllDataElements() ).thenReturn( new ArrayList<>( dataElements.values() ) );
         when( dataSetService.getAllDataSets() ).thenReturn( newArrayList( dataSet1, dataSet2 ) );
 
-        SortedMap<DataElement, Collection<DataSet>> result = subject
-            .getDataElementsAssignedToDataSetsWithDifferentPeriodTypes();
-        assertThat( result.keySet(), hasSize( 0 ) );
+        assertTrue( subject.getDataElementsAssignedToDataSetsWithDifferentPeriodTypes().isEmpty() );
     }
 
     @Test
-    public void testGetDataSetsNotAssignedToOrganisationUnits()
+    void testGetDataSetsNotAssignedToOrganisationUnits()
     {
         clearInvocations( dataSetService );
         subject.getDataSetsNotAssignedToOrganisationUnits();
@@ -410,20 +408,18 @@ public class DataIntegrityServiceTest
     }
 
     @Test
-    public void testGetIndicatorsWithIdenticalFormulas()
+    void testGetIndicatorsWithIdenticalFormulas()
     {
-        when( indicatorService.getAllIndicators() ).thenReturn( newArrayList( indicatorA, indicatorB, indicatorC ) );
-        Set<Set<Indicator>> expected = subject.getIndicatorsWithIdenticalFormulas();
+        when( indicatorService.getAllIndicators() ).thenReturn( List.of( indicatorA, indicatorB, indicatorC ) );
+        List<DataIntegrityIssue> issues = subject.getIndicatorsWithIdenticalFormulas();
 
-        Collection<Indicator> violation = expected.iterator().next();
-        assertThat( expected, hasSize( 1 ) );
-        assertThat( violation, hasSize( 2 ) );
-        assertThat( violation, hasItem( indicatorB ) );
-        assertThat( violation, hasItem( indicatorC ) );
+        assertEquals( 1, issues.size() );
+        assertContainsOnly( issues.get( 0 ).getRefs(),
+            issueName( indicatorB ), issueName( indicatorC ) );
     }
 
     @Test
-    public void testGetIndicatorsWithoutGroups()
+    void testGetIndicatorsWithoutGroups()
     {
         subject.getIndicatorsWithoutGroups();
         verify( indicatorService ).getIndicatorsWithoutGroups();
@@ -431,7 +427,7 @@ public class DataIntegrityServiceTest
     }
 
     @Test
-    public void testGetOrganisationUnitsWithCyclicReferences()
+    void testGetOrganisationUnitsWithCyclicReferences()
     {
         subject.getOrganisationUnitsWithCyclicReferences();
         verify( organisationUnitService ).getOrganisationUnitsWithCyclicReferences();
@@ -439,7 +435,7 @@ public class DataIntegrityServiceTest
     }
 
     @Test
-    public void testGetOrphanedOrganisationUnits()
+    void testGetOrphanedOrganisationUnits()
     {
         subject.getOrphanedOrganisationUnits();
         verify( organisationUnitService ).getOrphanedOrganisationUnits();
@@ -447,7 +443,7 @@ public class DataIntegrityServiceTest
     }
 
     @Test
-    public void testGetOrganisationUnitsWithoutGroups()
+    void testGetOrganisationUnitsWithoutGroups()
     {
         subject.getOrganisationUnitsWithoutGroups();
         verify( organisationUnitService ).getOrganisationUnitsWithoutGroups();
@@ -455,114 +451,117 @@ public class DataIntegrityServiceTest
     }
 
     @Test
-    public void testGetProgramRulesWithNoExpression()
+    void testGetProgramRulesWithNoExpression()
     {
         programRuleB.setCondition( null );
-        when( programRuleService.getProgramRulesWithNoCondition() ).thenReturn( Arrays.asList( programRuleB ) );
+        when( programRuleService.getProgramRulesWithNoCondition() ).thenReturn( List.of( programRuleB ) );
 
-        Map<Program, Collection<ProgramRule>> actual = subject.getProgramRulesWithNoCondition();
+        List<DataIntegrityIssue> issues = subject.getProgramRulesWithNoCondition();
 
         verify( programRuleService ).getProgramRulesWithNoCondition();
         verify( programRuleService, times( 1 ) ).getProgramRulesWithNoCondition();
 
-        assertThat( actual, hasKey( programB ) );
-        assertThat( actual.get( programB ), hasSize( 1 ) );
-        assertThat( actual.get( programB ), contains( programRuleB ) );
+        assertEquals( 1, issues.size() );
+        DataIntegrityIssue issue = issues.get( 0 );
+        assertEquals( issueName( programB ), issue.getName() );
+        assertContainsOnly( issue.getRefs(), issueName( programRuleB ) );
     }
 
     @Test
-    public void testGetProgramRulesVariableWithNoDataElement()
+    void testGetProgramRulesVariableWithNoDataElement()
     {
         programRuleVariableA.setProgram( programA );
 
         when( programRuleVariableService.getVariablesWithNoDataElement() )
-            .thenReturn( Arrays.asList( programRuleVariableA ) );
+            .thenReturn( List.of( programRuleVariableA ) );
 
-        Map<Program, Collection<ProgramRuleVariable>> actual = subject.getProgramRuleVariablesWithNoDataElement();
+        List<DataIntegrityIssue> issues = subject.getProgramRuleVariablesWithNoDataElement();
 
         verify( programRuleVariableService ).getVariablesWithNoDataElement();
         verify( programRuleVariableService, times( 1 ) ).getVariablesWithNoDataElement();
 
-        assertThat( actual, hasKey( programA ) );
-        assertThat( actual.get( programA ), hasSize( 1 ) );
-        assertThat( actual.get( programA ), contains( programRuleVariableA ) );
+        assertEquals( 1, issues.size() );
+        DataIntegrityIssue issue = issues.get( 0 );
+        assertEquals( issueName( programA ), issue.getName() );
+        assertContainsOnly( issue.getRefs(), issueName( programRuleVariableA ) );
     }
 
     @Test
-    public void testGetProgramRuleActionsWithNoDataObject()
+    void testGetProgramRuleActionsWithNoDataObject()
     {
         programRuleActionA.setProgramRule( programRuleA );
 
         when( programRuleActionService.getProgramActionsWithNoLinkToDataObject() )
-            .thenReturn( Arrays.asList( programRuleActionA ) );
+            .thenReturn( List.of( programRuleActionA ) );
 
-        Map<ProgramRule, Collection<ProgramRuleAction>> actual = subject.getProgramRuleActionsWithNoDataObject();
+        List<DataIntegrityIssue> issues = subject.getProgramRuleActionsWithNoDataObject();
 
         verify( programRuleActionService ).getProgramActionsWithNoLinkToDataObject();
         verify( programRuleActionService, times( 1 ) ).getProgramActionsWithNoLinkToDataObject();
 
-        assertThat( actual, hasKey( programRuleA ) );
-        assertThat( actual.get( programRuleA ), hasSize( 1 ) );
-        assertThat( actual.get( programRuleA ), contains( programRuleActionA ) );
+        assertEquals( 1, issues.size() );
+        DataIntegrityIssue issue = issues.get( 0 );
+        assertEquals( issueName( programRuleA ), issue.getName() );
+        assertContainsOnly( issue.getRefs(), issueName( programRuleActionA ) );
     }
 
     @Test
-    public void testInvalidProgramIndicatorExpression()
+    void testInvalidProgramIndicatorExpression()
     {
         ProgramIndicator programIndicator = new ProgramIndicator();
         programIndicator.setName( "Test-PI" );
         programIndicator.setExpression( "A{someuid} + 1" );
 
         when( programIndicatorService.expressionIsValid( anyString() ) ).thenReturn( false );
-        when( programIndicatorService.getAllProgramIndicators() ).thenReturn( Arrays.asList( programIndicator ) );
+        when( programIndicatorService.getAllProgramIndicators() ).thenReturn( List.of( programIndicator ) );
 
         when( expressionService.getExpressionDescription( anyString(), any() ) )
             .thenThrow( new ParserException( INVALID_EXPRESSION ) );
 
-        Map<ProgramIndicator, String> invalidExpressions = subject.getInvalidProgramIndicatorExpressions();
+        List<DataIntegrityIssue> issues = subject.getInvalidProgramIndicatorExpressions();
 
-        assertNotNull( invalidExpressions );
-        assertEquals( invalidExpressions.size(), 1 );
-        assertTrue( invalidExpressions.containsKey( programIndicator ) );
-        assertTrue( invalidExpressions.containsValue( INVALID_EXPRESSION ) );
+        assertNotNull( issues );
+        assertEquals( 1, issues.size() );
+        DataIntegrityIssue issue = issues.get( 0 );
+        assertEquals( issueName( programIndicator ), issue.getName() );
+        assertEquals( INVALID_EXPRESSION, issue.getComment() );
     }
 
     @Test
-    public void testInvalidProgramIndicatorFilter()
+    void testInvalidProgramIndicatorFilter()
     {
         ProgramIndicator programIndicator = new ProgramIndicator();
         programIndicator.setName( "Test-PI" );
         programIndicator.setFilter( "A{someuid} + 1" );
 
         when( programIndicatorService.filterIsValid( anyString() ) ).thenReturn( false );
-        when( programIndicatorService.getAllProgramIndicators() ).thenReturn( Arrays.asList( programIndicator ) );
+        when( programIndicatorService.getAllProgramIndicators() ).thenReturn( List.of( programIndicator ) );
 
         when( expressionService.getExpressionDescription( anyString(), any() ) )
             .thenThrow( new ParserException( INVALID_EXPRESSION ) );
 
-        Map<ProgramIndicator, String> invalidExpressions = subject.getInvalidProgramIndicatorFilters();
+        List<DataIntegrityIssue> issues = subject.getInvalidProgramIndicatorFilters();
 
-        assertNotNull( invalidExpressions );
-        assertEquals( invalidExpressions.size(), 1 );
-        assertTrue( invalidExpressions.containsKey( programIndicator ) );
-        assertTrue( invalidExpressions.containsValue( INVALID_EXPRESSION ) );
+        assertEquals( 1, issues.size(), 1 );
+        DataIntegrityIssue issue = issues.get( 0 );
+        assertEquals( issueName( programIndicator ), issue.getName() );
+        assertEquals( INVALID_EXPRESSION, issue.getComment() );
     }
 
     @Test
-    public void testValidProgramIndicatorFilter()
+    void testValidProgramIndicatorFilter()
     {
         ProgramIndicator programIndicator = new ProgramIndicator();
         programIndicator.setName( "Test-PI" );
         programIndicator.setFilter( "1 < 2" );
 
         when( programIndicatorService.filterIsValid( anyString() ) ).thenReturn( true );
-        when( programIndicatorService.getAllProgramIndicators() ).thenReturn( Arrays.asList( programIndicator ) );
+        when( programIndicatorService.getAllProgramIndicators() ).thenReturn( List.of( programIndicator ) );
 
-        Map<ProgramIndicator, String> invalidExpressions = subject.getInvalidProgramIndicatorFilters();
+        List<DataIntegrityIssue> issues = subject.getInvalidProgramIndicatorFilters();
 
         verify( expressionService, times( 0 ) ).getExpressionDescription( anyString(), any() );
-        assertNotNull( invalidExpressions );
-        assertTrue( invalidExpressions.isEmpty() );
+        assertTrue( issues.isEmpty() );
     }
 
     private Map<String, DataElement> createRandomDataElements( int quantity, String uidSeed )
